--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,21 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+/src/components/ChannelCard.jsx
+/src/components/ChannelDetail.jsx
+/src/components/Feed.jsx
+/src/components/SearchBar.jsx
+/src/components/SearchFeed.jsx
+/src/components/Sidebar.jsx
+/src/components/Navbar.jsx
+/src/components/VideoCard.jsx
+/src/components/VideoDetail.jsx
+/src/components/Videos.jsx
+
+/src/utils/fetchfromapi.js
+
+
+
+
